--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-    
 
+    <h1>Hello World</h1>
     <script src="./assets/js/app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
