--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 <body>
 
-    <h1>Hello World</h1>
+    <h1 id="bootstrap-override">Hello World!</h1>
+    <p>This is a paragraph</p>
+
     <script src="./assets/js/app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
