--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
 
 <body>
 
-    <h1 id="bootstrap-override">Hello World!</h1>
-    <p>This is a paragraph</p>
+    <div class="container">
+        <h1 id="bootstrap-override">Hello World!</h1>
+        <p>This is a paragraph</p>
+        <a class="btn btn-default" href="./hire-me.html">Hire Me</a>
+    </div>
 
     <script src="./assets/js/app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </body>
 
 
