removed unnecessary code. Changed directory structure

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
 
     <div class="container">
-        <h1 id="bootstrap-override">Hello World!</h1>
+        <h1>Hello World!</h1>
         <p>This is a paragraph</p>
-        <a class="btn btn-default" href="./hire-me.html">Hire Me</a>
+        <a class="btn btn-default" href="./views/hire-me.html">Hire Me</a>
     </div>
 
     <script src="./assets/js/app.js"></script>
