--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1>Hello World!</h1>
         <p>This is a paragraph</p>
-        <a class="btn btn-default" href="./views/hire-me.html">Hire Me</a>
+        <a class="btn btn-default" href="./assets/views/hire-me.html">Hire Me</a>
     </div>
 
     <script src="./assets/js/app.js"></script>
