index.html almost complete. Have to make it responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,9 +26,48 @@
 <body>
 
     <div class="container">
-        <h1>Hello World!</h1>
-        <p>This is a paragraph</p>
-        <a class="btn btn-default" href="./assets/views/hire-me.html">Hire Me</a>
+        <div class="row header">
+            <div class="col-sm-2">
+                <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle" height="135" width="135">
+            </div>
+
+            <div class="col-sm-10 header-text">
+                <div class="row">
+                    <h1>Saif Al Falah</h1>
+                </div>
+
+                <div class="row">
+                    <h4>Full Stack Web and Software Developer</h4>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row middle">
+            <p class="lead">Hey! I'm an independent full-stack web and software developer from New Delhi, India. I work primarily with <a href="http://angularjs.org/">AngularJS 1.x</a>, <a href="https://nodejs.org/">NodeJS</a> and <a href="https://facebook.github.io/react/">ReactJS</a>. In my previous life, I used to be Windows Phone Developer with more than 1 Million cumulative downloads
+                on the Windows Marketplace.</p>
+
+            <p class="lead">Take a look through some of my <a href="./assets/views/projects.html">projects</a> and <a href="#">blog posts</a>. Need a help with an upcoming project or application?
+                Learn a bit more <a href="./assets/views/about.html">about me</a> and then consider <a href="./assets/views/hire-me.html">hiring me</a>.
+
+        </div>
+
+        <div class="row footer">
+            <div class="row">
+                <div class="col-sm-4"> 
+                    <a href="mailto:saifalfalah@gmail.com"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i>&nbsp;Email</a>
+                </div>
+
+                <div class="col-sm-4">
+                    <a href="https://github.com/saifalfalah"><i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;Github</a>
+                </div>
+
+                <div class="col-sm-4">
+                    <a href="https://twitter.com/saifalfalah"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;Twitter</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./assets/js/app.js"></script>
