index.html, all content added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,25 +27,27 @@
 
     <div class="container">
         <div class="row header">
-            <div class="col-sm-2">
+
+            <div class="col-sm-4">
                 <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle" height="135" width="135">
             </div>
 
-            <div class="col-sm-10 header-text">
+            <div class="col-sm-8 header-text">
                 <div class="row">
-                    <h1>Saif Al Falah</h1>
+                    <h1 class="bootstrap-override">Saif Al Falah</h1>
                 </div>
 
                 <div class="row">
-                    <h4>Full Stack Web and Software Developer</h4>
+                    <h4 class="subtle bootstrap-override">Full Stack Web and Software Developer</h4>
                 </div>
             </div>
+
         </div>
 
-        <hr>
-
-        <div class="row middle">
-            <p class="lead">Hey! I'm an independent full-stack web and software developer from New Delhi, India. I work primarily with <a href="http://angularjs.org/">AngularJS 1.x</a>, <a href="https://nodejs.org/">NodeJS</a> and <a href="https://facebook.github.io/react/">ReactJS</a>. In my previous life, I used to be Windows Phone Developer with more than 1 Million cumulative downloads
+        <div class="row content">
+            <p class="lead">Hey! I'm an independent full-stack web and software developer from New Delhi, India. I work primarily with <a href="http://angularjs.org/">AngularJS 1.x</a>, <a href="https://nodejs.org/">NodeJS</a> and <a href="https://facebook.github.io/react/">ReactJS</a>.</p>
+            
+            <p class="lead">In my previous life, I used to be Windows Phone Developer with more than 1 Million cumulative downloads
                 on the Windows Marketplace.</p>
 
             <p class="lead">Take a look through some of my <a href="./assets/views/projects.html">projects</a> and <a href="#">blog posts</a>. Need a help with an upcoming project or application?
@@ -77,8 +79,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 </body>
-
-
-
-
 </html>
