Added Windows Portfolio link. Added links to the footer

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <div class="container">
         <div class="row header">
 
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle" height="135" width="135">
             </div>
 
-            <div class="col-sm-8 header-text">
+            <div class="col-sm-8 col-sm-offset-1 header-text">
                 <div class="row">
                     <h1 class="bootstrap-override">Saif Al Falah</h1>
                 </div>
@@ -47,7 +47,7 @@
         <div class="row content">
             <p class="lead">Hey! I'm an independent full-stack web and software developer from New Delhi, India. I work primarily with <a href="http://angularjs.org/">AngularJS 1.x</a>, <a href="https://nodejs.org/">NodeJS</a> and <a href="https://facebook.github.io/react/">ReactJS</a>.</p>
             
-            <p class="lead">In my previous life, I used to be Windows Phone Developer with more than 1 Million cumulative downloads
+            <p class="lead">In my previous life, I used to be <a href="./assets/views/windows.html">Windows developer</a> with more than 1 Million cumulative downloads
                 on the Windows Marketplace.</p>
 
             <p class="lead">Take a look through some of my <a href="./assets/views/projects.html">projects</a> and <a href="#">blog posts</a>. Need a help with an upcoming project or application?
@@ -67,6 +67,17 @@
 
                 <div class="col-sm-4">
                     <a href="https://twitter.com/saifalfalah"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;Twitter</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <a href="https://linkedin.com/saifalfalah"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://linkedin.com/saifalfalah"><i class="fa  fa-stack-overflow fa-lg" aria-hidden="true"></i>&nbsp;Stack Overflow</a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://linkedin.com/saifalfalah"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
                 </div>
             </div>
         </div>
