--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="row content">
-            <p class="lead">Hey! I'm an independent full-stack web and software developer from New Delhi, India. I work primarily with <a href="http://angularjs.org/">AngularJS 1.x</a>, <a href="https://nodejs.org/">NodeJS</a> and <a href="https://facebook.github.io/react/">ReactJS</a>.</p>
+            <p class="lead">Hey! I'm an independent full-stack web and software developer from <a href="https://goo.gl/maps/eF71q9ojERq" target="_blank">New Delhi, India</a>. I work primarily with <a href="http://angularjs.org/" target="_blank">AngularJS 1.x</a>, <a href="https://nodejs.org/" target="_blank">NodeJS</a> and <a href="https://facebook.github.io/react/" target="_blank">ReactJS</a>.</p>
             
             <p class="lead">In my previous life, I used to be <a href="./assets/views/windows.html">Windows developer</a> with more than 1 Million cumulative downloads
                 on the Windows Marketplace.</p>
@@ -62,22 +62,22 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <a href="https://github.com/saifalfalah"><i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;Github</a>
+                    <a href="https://github.com/saifalfalah" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;Github</a>
                 </div>
 
                 <div class="col-sm-4">
-                    <a href="https://twitter.com/saifalfalah"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;Twitter</a>
+                    <a href="https://twitter.com/saifalfalah" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;Twitter</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="https://linkedin.com/saifalfalah"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
+                    <a href="https://linkedin.com/saifalfalah" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="https://linkedin.com/saifalfalah"><i class="fa  fa-stack-overflow fa-lg" aria-hidden="true"></i>&nbsp;Stack Overflow</a>
+                    <a href="https://linkedin.com/saifalfalah" target="_blank"><i class="fa  fa-stack-overflow fa-lg" aria-hidden="true"></i>&nbsp;Stack Overflow</a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="https://linkedin.com/saifalfalah"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
+                    <a href="https://linkedin.com/saifalfalah" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
                 </div>
             </div>
         </div>
