--- a/index.html
+++ b/index.html
@@ -24,8 +24,22 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="row">
+       <div class="col-xs-4 col-xs-offset-4  col-sm-offset-4 pad">
+                <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle">
+       </div>
+</div>
+                
+                    <h1 class="bootstrap-override text-center">Saif Al Falah</h1>
 
-    <div class="container">
+
+
+                    <h4 class="subtle bootstrap-override text-center">Full Stack Web and Software Developer</h4>
+              
+   
+
+    <!--<div class="container">
         <div class="row header">
 
             <div class="col-sm-3">
@@ -42,7 +56,7 @@
                 </div>
             </div>
 
-        </div>
+        </div>-->
 
         <div class="row content">
             <p class="lead">Hey! I'm an independent full-stack web and software developer from <a href="https://goo.gl/maps/eF71q9ojERq" target="_blank">New Delhi, India</a>. I work primarily with <a href="http://angularjs.org/" target="_blank">AngularJS 1.x</a>, <a href="https://nodejs.org/" target="_blank">NodeJS</a> and <a href="https://facebook.github.io/react/" target="_blank">ReactJS</a>.</p>
@@ -82,6 +96,7 @@
             </div>
         </div>
     </div>
+     </div>
 
     <script src="./assets/js/app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
