--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-       <div class="col-xs-4 col-xs-offset-4  col-sm-offset-4 pad">
+       <div class="col-xs-4 col-xs-offset-4  col-sm-offset-4">
                 <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle">
        </div>
 </div>
