The style is updated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <!--<link rel="stylesheet" href='bootstrap.min.css'>-->
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -28,15 +29,15 @@
         <header class="row">
             
 
-            <div class="col-md-4 col-md-offset-1">
+            <div class="col-md-3">
                 <div class="row">
-                    <figure class="col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
-                        <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle img-center" width="120px">
+                    <figure class="col-md-7 col-md-offset-5">
+                        <img src="./assets/images/bird.jpg" alt="saif al falah" class="img-circle" width="130px">
                     </figure>
                 </div>
             </div>
            
-            <div class='col-md-6'>
+            <div class='col-md-7'>
                 <h1 class="bootstrap-override text-center">Saif Al Falah</h1>
                 <h4 class="subtle bootstrap-override text-center">Full Stack Web and Software Developer</h4>
             </div>
@@ -59,26 +60,26 @@
 
         <div class="row footer">
             <div class="row">
-                <div class="col-sm-4"> 
+                <div class="col-sm-4 col-xs-4"> 
                     <a href="mailto:saifalfalah@gmail.com"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i>&nbsp;Email</a>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-4">
                     <a href="https://github.com/saifalfalah" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;Github</a>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-4">
                     <a href="https://twitter.com/saifalfalah" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;Twitter</a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-4">
                     <a href="https://linkedin.com/saifalfalah" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>&nbsp;LinkedIn</a>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-4">
                     <a href="https://linkedin.com/saifalfalah" target="_blank"><i class="fa  fa-stack-overflow fa-lg" aria-hidden="true"></i>&nbsp;Stack Overflow</a>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-xs-4">
                     <a href="https://linkedin.com/saifalfalah" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true">
                         </i>&nbsp;LinkedIn</a>
                 </div>
@@ -93,5 +94,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+       <!-- <script src='bootstrap.min.js'></script>-->
 </body>
 </html>
