--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Saif Al Falah is web developer working as a NodeJS and ReactJS freelancer" />
     <title>Saif Al Falah | Full Stack Web Developer</title>
 
     <!--Stylesheets-->
